--- a/notebooks/train-dev.ipynb
+++ b/notebooks/train-dev.ipynb
@@ -44,6 +44,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# study_id, etc.\n",
+    "chexpert_labeller = pd.read_csv('../data_msc_project/data/chexpert/chexpert_labels(chexpert).csv')\n",
+    "# study_id, Report Impression\n",
+    "chex_reports = pd.read_csv('../data_msc_project/data/chexpert/chexpert_reports(with-id).csv')\n",
+    "\n",
+    "# Merge the two dataframes\n",
+    "chexpert_labels = pd.merge(chexpert_labeller, chex_reports, on='study_id')\n",
+    "\n",
+    "# Drop study_id column\n",
+    "chexpert_labels = chexpert_labels.drop(columns=['study_id'])\n",
+    "\n",
+    "# Split data into train and dev\n",
+    "chexpert_labels_train, chexpert_labels_dev = train_test_split(chexpert_labels, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# move last column to the first column\n",
+    "cols = chexpert_labels_train.columns.tolist()\n",
+    "cols = cols[-1:] + cols[:-1]\n",
+    "chexpert_labels_train = chexpert_labels_train[cols]\n",
+    "\n",
+    "cols = chexpert_labels_dev.columns.tolist()\n",
+    "cols = cols[-1:] + cols[:-1]\n",
+    "chexpert_labels_dev = chexpert_labels_dev[cols]\n",
+    "\n",
+    "# # Save train and dev data\n",
+    "chexpert_labels_train.to_csv('../data_msc_project/data/dev/chexpert_train(chexpert).csv', index=False)\n",
+    "chexpert_labels_dev.to_csv('../data_msc_project/data/dev/chexpert_dev(chexpert).csv', index=False) \n",
+    "\n",
+    "# # Save first column in a separate file\n",
+    "chexpert_labels_train.iloc[:,0].to_csv('../data_msc_project/data/dev/chexpert_train_reports(chexpert).csv', index=False)\n",
+    "chexpert_labels_dev.iloc[:,0].to_csv('../data_msc_project/data/dev/chexpert_dev_reports(chexpert).csv', index=False)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -57,17 +97,17 @@
     }
    ],
    "source": [
-    "balanced_labels = pd.read_csv('../data_msc_project/data/balanced/balanced(chexbert).csv')\n",
-    "balanced_labels_train, balanced_labels_dev = train_test_split(balanced_labels, test_size=0.2, random_state=42)\n",
+    "# balanced_labels = pd.read_csv('../data_msc_project/data/balanced/balanced(chexbert).csv')\n",
+    "# balanced_labels_train, balanced_labels_dev = train_test_split(balanced_labels, test_size=0.2, random_state=42)\n",
     "\n",
-    "balanced_labels_train.to_csv('../data_msc_project/data/dev/balanced_train(chexbert).csv', index=False)\n",
-    "balanced_labels_dev.to_csv('../data_msc_project/data/dev/balanced_dev(chexbert).csv', index=False)\n",
+    "# balanced_labels_train.to_csv('../data_msc_project/data/dev/balanced_train(chexbert).csv', index=False)\n",
+    "# balanced_labels_dev.to_csv('../data_msc_project/data/dev/balanced_dev(chexbert).csv', index=False)\n",
     "\n",
-    "balanced_labels_train.iloc[:,0].to_csv('../data_msc_project/data/dev/balanced_train_reports.csv', index=False)\n",
-    "balanced_labels_dev.iloc[:,0].to_csv('../data_msc_project/data/dev/balanced_dev_reports.csv', index=False)\n",
+    "# balanced_labels_train.iloc[:,0].to_csv('../data_msc_project/data/dev/balanced_train_reports.csv', index=False)\n",
+    "# balanced_labels_dev.iloc[:,0].to_csv('../data_msc_project/data/dev/balanced_dev_reports.csv', index=False)\n",
     "\n",
-    "print(balanced_labels_train.shape)\n",
-    "print(balanced_labels_dev.shape)"
+    "# print(balanced_labels_train.shape)\n",
+    "# print(balanced_labels_dev.shape)"
    ]
   },
   {
